@@ -481,6 +481,15 @@ AC_ARG_ENABLE(native-heap,
 	esac])
 AC_MSG_RESULT(${CONFIG_RTAI_OPT_NATIVE_HEAP:-no})
 
+AC_MSG_CHECKING(for native alarm support)
+AC_ARG_ENABLE(native-alarm,
+	AS_HELP_STRING([--enable-native-alarm], [Enable alarm support in native skin]),
+	[case "$enableval" in
+	y | yes) CONFIG_RTAI_OPT_NATIVE_ALARM=y ;;
+	*) unset CONFIG_RTAI_OPT_NATIVE_ALARM ;;
+	esac])
+AC_MSG_RESULT(${CONFIG_RTAI_OPT_NATIVE_ALARM:-no})
+
 AC_MSG_CHECKING(for pSOS+ skin)
 AC_ARG_ENABLE(psos-skin,
 	AS_HELP_STRING([--enable-psos-skin], [Build pSOS+ emulator]),
@@ -719,6 +728,7 @@ test \! x$CONFIG_RTAI_OPT_NATIVE_MUTEX = x && AC_DEFINE(CONFIG_RTAI_OPT_NATIVE_M
 test \! x$CONFIG_RTAI_OPT_NATIVE_COND = x && AC_DEFINE(CONFIG_RTAI_OPT_NATIVE_COND,1,[Kconfig])
 test \! x$CONFIG_RTAI_OPT_NATIVE_QUEUE = x && AC_DEFINE(CONFIG_RTAI_OPT_NATIVE_QUEUE,1,[Kconfig])
 test \! x$CONFIG_RTAI_OPT_NATIVE_HEAP = x && AC_DEFINE(CONFIG_RTAI_OPT_NATIVE_HEAP,1,[Kconfig])
+test \! x$CONFIG_RTAI_OPT_NATIVE_ALARM = x && AC_DEFINE(CONFIG_RTAI_OPT_NATIVE_ALARM,1,[Kconfig])
 
 dnl CAUTION: We need to have the CONFIG_RTAI_XX symbols always defined when
 dnl the configuration header is read, but we want the Autoconf-produced
@@ -780,6 +790,7 @@ AM_CONDITIONAL(CONFIG_RTAI_OPT_NATIVE_MUTEX,[test x$CONFIG_RTAI_OPT_NATIVE_MUTEX
 AM_CONDITIONAL(CONFIG_RTAI_OPT_NATIVE_COND,[test x$CONFIG_RTAI_OPT_NATIVE_COND = xy])
 AM_CONDITIONAL(CONFIG_RTAI_OPT_NATIVE_QUEUE,[test x$CONFIG_RTAI_OPT_NATIVE_QUEUE = xy])
 AM_CONDITIONAL(CONFIG_RTAI_OPT_NATIVE_HEAP,[test x$CONFIG_RTAI_OPT_NATIVE_HEAP = xy])
+AM_CONDITIONAL(CONFIG_RTAI_OPT_NATIVE_ALARM,[test x$CONFIG_RTAI_OPT_NATIVE_ALARM = xy])
 
 dnl Documentation.
 AM_CONDITIONAL(CONFIG_RTAI_DOC_DOX,[test "$CONFIG_RTAI_DOC_DOX" = y])
