@@ -28,6 +28,9 @@
 #undef CONFIG_RTAI_OPT_FUSION
 
 /* Kconfig */
+#undef CONFIG_RTAI_OPT_NATIVE_ALARM
+
+/* Kconfig */
 #undef CONFIG_RTAI_OPT_NATIVE_COND
 
 /* Kconfig */
